cmake_minimum_required(VERSION 3.10)
project(StringCalculator)

# Add executable target
add_executable(StringCalculator src/main.cpp)

# Link StringCalculator to appropriate libraries if necessary
# target_link_libraries(StringCalculator <libraries>)

# Include directories if necessary
# target_include_directories(StringCalculator PUBLIC <include_directories>)
